--- a/.github/workflows/reusable_checkout.yml
+++ b/.github/workflows/reusable_checkout.yml
@@ -14,3 +14,5 @@ jobs:
           ref: ${{ github.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 2
+      - name: List directory contents
+        run: ls -al
