--- a/.pylintrc
+++ b/.pylintrc
@@ -1,20 +1,20 @@
-[tool.pylint.main]
---jobs=0
---recursive=True
+[MAIN]
+jobs=0
+recursive=True
 
-[tool.pylint.classes]
---check-protected-access-in-special-methods=True
+[CLASSES]
+check-protected-access-in-special-methods=True
 
-[tool.pylint.design]
---max-bool-expr=3
---max-branches=8
---max-complexity=8
+[DESIGN]
+max-bool-expr=3
+max-branches=8
+max-complexity=8
 
-[tool.pylint.logging]
---logging-format-style=new
+[LOGGING]
+logging-format-style=new
 
-[tool.pylint.similarities]
---ignore-comments=False
---ignore-docstrings=False
---ignore-imports=False
---ignore-signatures=False
+[SIMILARITIES]
+ignore-comments=False
+ignore-docstrings=False
+ignore-imports=False
+ignore-signatures=False
