--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Run lint
         run: |
+          pylint --errors-only qiskit_transpiler_service
+          pylint --errors-only tests
           python -m black --check .
   
   run-tests:
