--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,5 @@
 log_cli = true
 log_cli_format = %(asctime)s  %(levelname)s %(message)s (%(filename)s:%(lineno)s)
 log_cli_date_format=%Y-%m-%d %H:%M:%S
+markers =
+    disable_monkeypatch: Disable monkeypatch of env vars for some tests
