--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.11
-      
+          python-version: '3.11'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -20,6 +19,18 @@ jobs:
       - name: Run lint
         run: |
           python -m black --check .
+      - name: Build docs
+        run: |
+          python -m sphinx -W --keep-going docs/ docs/_build
+      - name: Store built documentation artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: qst-pr-docs
+          path: |
+            ./docs/_build/*
+            !**/.doctrees
+            !**/.buildinfo
+          if-no-files-found: error
   
   run-tests:
     runs-on: ubuntu-latest
@@ -34,7 +45,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
