--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,15 @@
+# This code is a Qiskit project.
+#
+# (C) Copyright IBM 2024.
+#
+# This code is licensed under the Apache License, Version 2.0. You may
+# obtain a copy of this license in the LICENSE file in the root directory
+# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
+#
+# Any modifications or derivative works of this code must retain this
+# copyright notice, and modified files need to carry a notice indicating
+# that they have been altered from the originals.
+
 name: CI Pipeline
 
 on: [pull_request]
@@ -10,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -19,19 +31,9 @@ jobs:
       - name: Run lint
         run: |
           python -m black --check .
-      - name: Build docs
-        run: |
-          python -m sphinx -W --keep-going docs/ docs/_build
-      - name: Store built documentation artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: qst-pr-docs
-          path: |
-            ./docs/_build/*
-            !**/.doctrees
-            !**/.buildinfo
-          if-no-files-found: error
-  
+      - name: Build documentation
+        uses: ./.github/actions/build-docs
+
   run-tests:
     runs-on: ubuntu-latest
 
