--- a/.github/workflows/upload-docs.yml
+++ b/.github/workflows/upload-docs.yml
@@ -10,17 +10,24 @@
 # copyright notice, and modified files need to carry a notice indicating
 # that they have been altered from the originals.
 
-name: CI Pipeline
-
-on: [pull_request]
+name: Upload documentation
+on:
+  tags:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  run-lint:
+  build:
+    if: github.repository_owner == 'Qiskit'
+    name: Build
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
+        name: Install Python
         with:
           python-version: "3.11"
       - name: Install dependencies
@@ -28,32 +35,5 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install -r ./requirements-dev.txt
 
-      - name: Run lint
-        run: |
-          python -m black --check .
       - name: Build documentation
         uses: ./.github/actions/build-docs
-
-  run-tests:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        python-version: [3.11, 3.8]
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r ./requirements-dev.txt
-
-      - name: Run tests
-        env:
-          QISKIT_IBM_TOKEN: ${{ secrets.QISKIT_IBM_TOKEN }}
-        run: |
-          python -m pytest .
