--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,3 +10,4 @@ sphinx==7.1.2; python_version < '3.9'
 sphinx==7.2.6; python_version >= '3.9'
 qiskit-sphinx-theme==1.16.1
 sphinxcontrib-katex==0.9.9
+ruff>=0.6.2
