--- a/ruff.toml
+++ b/ruff.toml
@@ -1,5 +1,7 @@
 [lint]
 
+select = ["E", "I"]
+
 # Ignore `F401` (unused import violations) in all `__init__.py` files.
 [lint.per-file-ignores]
 "__init__.py" = ["F401"]
