--- a/.github/actions/build-docs/action.yml
+++ b/.github/actions/build-docs/action.yml
@@ -17,7 +17,9 @@ runs:
   steps:
     - name: Build documentation
       shell: bash
-      run: python -m sphinx -W --keep-going docs/ docs/_build
+      run: |
+        python tools/concat_release_notes.py
+        python -m sphinx -W --keep-going docs/ docs/_build
     - name: Store built documentation artifact
       uses: actions/upload-artifact@v4
       with:
