Add scripts/docs and scripts/docs-clean

--- a/.github/actions/build-docs/action.yml
+++ b/.github/actions/build-docs/action.yml
@@ -17,9 +17,7 @@ runs:
   steps:
     - name: Build documentation
       shell: bash
-      run: |
-        python scripts/concat_release_notes.py
-        python -m sphinx -W --keep-going docs/ docs/_build
+      run: ./scripts/docs
     - name: Store built documentation artifact
       uses: actions/upload-artifact@v4
       with:
