Add release notes through Towncrier (#58)
## Motivation

Release notes are a key feature for projects on docs.quantum.ibm.com. One of our top user requests/complaints is not knowing when and how things change, so it's crucial to have user-facing release notes.

Release notes are meant for end-users, _not contributors_. Your release notes should not include internal-only changes like using new tools. They should be written to be understood by end-users.

## PR details

This PR adds a workflow for release notes based on the tool [Towncrier](https://towncrier.readthedocs.io/en/stable/). Qiskit Runtime has been using this for the 9 months and has been happy with it. Note that some other projects use Reno, but we had issues with Reno and Runtime, and I think Reno is a much more confusing tool.

This change requires buy-in from the Transpiler dev team:

* Whenever you make a user-facing change, you need to create a release note.
* The release manager needs to set up the release notes file for that release.

Every release, like 0.4.2, has a single file dedicated to it. We automatically combine all those release notes into a single file as part of the Sphinx build. Unreleased versions have a file-per-change, which reduces merge conflicts.

The PR also adds the scripts `scripts/docs` and `scripts/docs-clean`.

---------

Co-authored-by: Yaiza <yaiza.garcia.mm@gmail.com>

--- a/.github/actions/build-docs/action.yml
+++ b/.github/actions/build-docs/action.yml
@@ -17,7 +17,7 @@ runs:
   steps:
     - name: Build documentation
       shell: bash
-      run: python -m sphinx -W --keep-going docs/ docs/_build
+      run: ./scripts/docs
     - name: Store built documentation artifact
       uses: actions/upload-artifact@v4
       with:
