--- a/ruff.toml
+++ b/ruff.toml
@@ -2,6 +2,8 @@
 
 select = ["E", "I"]
 
+ignore = ["E501"]
+
 # Ignore `F401` (unused import violations) in all `__init__.py` files.
 [lint.per-file-ignores]
 "__init__.py" = ["F401"]
