--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
-qiskit>=1.3,<2.0
+qiskit==2.0.0rc1
 backoff~=2.0
-qiskit_ibm_runtime>=0.23.0
+qiskit_ibm_runtime>=0.37.0
 qiskit-qasm3-import~=0.4
 black==24.1.1
 black[jupyter]==24.1.1
