--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
-qiskit>=1.3,<2.0
+qiskit>=1.4.2
 backoff~=2.0
-qiskit_ibm_runtime>=0.23.0
+qiskit_ibm_runtime>=0.37.0
 qiskit-qasm3-import~=0.4
 black==24.1.1
 black[jupyter]==24.1.1
@@ -12,4 +12,4 @@ sphinx==7.2.6; python_version >= '3.9'
 qiskit-sphinx-theme==1.16.1
 sphinxcontrib-katex==0.9.9
 networkx==2.8.5
-qiskit_ibm_ai_local_transpiler~=0.2
+qiskit_ibm_ai_local_transpiler~=0.3
