--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,6 @@ jobs:
         env:
           QISKIT_IBM_TOKEN: ${{ secrets.QISKIT_IBM_TOKEN }}
           QISKIT_IBM_CHANNEL: "ibm_cloud"
-          QISKIT_IBM_RUNTIME_API_URL: "https://iam.cloud.ibm.com/identity/token"
+          QISKIT_IBM_RUNTIME_API_URL: "https://cloud.ibm.com"
         run: |
           python -m pytest .
