--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install dependencies (Python 3.9)
+        if: matrix.python-version == '3.9'
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r ./requirements-dev-3.9.txt
+
+      - name: Install dependencies (Other versions)
+        if: matrix.python-version != '3.9'
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r ./requirements-dev.txt
