Pin requirements for Python 3.9

--- a/requirements-dev-3.9.txt
+++ b/requirements-dev-3.9.txt
@@ -15,4 +15,114 @@ qiskit-sphinx-theme==1.16.1
 sphinxcontrib-katex==0.9.9
 networkx==2.8.5
 qiskit_ibm_ai_local_transpiler~=0.4
-rpds-py==0.25.0
+
+# Pinned versions for Python 3.9
+aiobotocore==2.23.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiohttp-cors==0.8.1
+aioitertools==0.12.0
+aiosignal==1.4.0
+annotated-types==0.7.0
+asttokens==3.0.0
+attrs==25.3.0
+botocore==1.38.46
+cachetools==5.5.2
+certifi==2024.7.4
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.1.8
+cloudpickle==2.2.1
+colorful==0.5.7
+comm==0.2.2
+cryptography==45.0.5
+decorator==5.2.1
+Deprecated==1.2.18
+dill==0.4.0
+distlib==0.4.0
+executing==2.2.0
+filelock==3.18.0
+frozenlist==1.7.0
+fsspec==2025.7.0
+google-api-core==2.25.1
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+grpcio==1.73.1
+ibm-cloud-sdk-core==3.18
+ibm-platform-services==0.48.0
+idna==3.10
+importlib_metadata==8.4.0
+ipython==8.18.0
+ipywidgets==8.1.7
+jedi==0.19.2
+jmespath==1.0.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+jupyterlab_widgets==3.0.15
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+msgpack==1.1.1
+multidict==6.6.3
+numpy==2.0.2
+opencensus==0.11.4
+opencensus-context==0.1.3
+opentelemetry-api==1.33.0
+opentelemetry-exporter-otlp-proto-common==1.33.0
+opentelemetry-exporter-otlp-proto-grpc==1.33.0
+opentelemetry-exporter-prometheus==0.54b0
+opentelemetry-instrumentation==0.54b0
+opentelemetry-instrumentation-requests==0.54b0
+opentelemetry-proto==1.33.0
+opentelemetry-sdk==1.33.0
+opentelemetry-semantic-conventions==0.54b0
+opentelemetry-util-http==0.54b0
+packaging==25.0
+parso==0.8.4
+pbr==6.1.1
+pexpect==4.9.0
+platformdirs==4.3.8
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==5.29.5
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-spy==0.4.0
+pyarrow==18.1.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+PyJWT==2.10.1
+pyspnego==0.11.2
+python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+ray==2.48.0
+referencing==0.36.2
+requests==2.32.4
+requests_ntlm==1.3.0
+rpds-py==0.26.0
+rsa==4.9.1
+rustworkx==0.16.0
+s3fs==2025.7.0
+scipy==1.13.1
+six==1.17.0
+smart_open==7.3.0.post1
+stack-data==0.6.3
+stevedore==5.4.1
+symengine==0.13.0
+sympy==1.14.0
+tqdm==4.67.1
+traitlets==5.14.3
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==1.26.18
+virtualenv==20.32.0
+wcwidth==0.2.13
+widgetsnbextension==4.0.14
+wrapt==1.17.2
+yarl==1.20.1
+zipp==3.19.1
