--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,18 +49,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies (Python 3.9)
-        if: matrix.python-version == '3.9'
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r ./requirements-dev-3.9.txt
-
-      - name: Install dependencies (Other versions)
-        if: matrix.python-version != '3.9'
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r ./requirements-dev.txt
-
       - name: Run tests
         env:
           QISKIT_IBM_TOKEN: ${{ secrets.QISKIT_IBM_TOKEN }}
