--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,4 @@ jobs:
           QISKIT_IBM_RUNTIME_API_URL: "https://test.cloud.ibm.com"
           QISKIT_SERVERLESS_API_URL: "https://qiskit-serverless-dev.quantum.ibm.com"
         run: |
-          python -m pytest --reruns 3 --only-rerun "qiskit.transpiler.exceptions.TranspilerError" .
+          python -m pytest --reruns 3 .
