--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,11 +53,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r ./requirements-dev.txt
-
       - name: Run tests
         env:
           QISKIT_IBM_TOKEN: ${{ secrets.QISKIT_IBM_TOKEN }}
-          QISKIT_IBM_CHANNEL: "ibm_quantum"
-          QISKIT_IBM_RUNTIME_API_URL: "https://auth-dev.quantum-computing.ibm.com/api"
+          QISKIT_IBM_INSTANCE: ${{ secrets.QISKIT_IBM_INSTANCE }}
+          QISKIT_IBM_CHANNEL: "ibm_quantum_platform"
+          QISKIT_IBM_RUNTIME_API_URL: "https://test.cloud.ibm.com"
+          QISKIT_SERVERLESS_API_URL: "https://qiskit-serverless-dev.quantum.ibm.com"
         run: |
-          python -m pytest .
+          python -m pytest --reruns 3 .
