--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ log_cli_format = %(asctime)s  %(levelname)s %(message)s (%(filename)s:%(lineno)s
 log_cli_date_format=%Y-%m-%d %H:%M:%S
 markers =
     disable_monkeypatch: Disable monkeypatch of env vars for some tests
+    e2e: End-to-end test. Runs only if RUN_E2E=1 and skips default mocks.
