ci: migrate CI pipeline to uv
In addition, the build-docs step has been decoupled to a separate job, to isolate the dependencies by group and save space by environment

--- a/.github/actions/build-docs/action.yml
+++ b/.github/actions/build-docs/action.yml
@@ -17,7 +17,7 @@ runs:
   steps:
     - name: Build documentation
       shell: bash
-      run: ./scripts/docs
+      run: uv run ./scripts/docs
     - name: Store built documentation artifact
       uses: actions/upload-artifact@v4
       with:
