ci: add ai-local-mode as extra dependency on the run-tests job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Sync dependencies
-        run: uv sync --group dev
+        run: uv sync --group dev --extra ai-local-mode
 
       - name: Run tests
         env:
