--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Topic :: Scientific/Engineering",
 ]
 dependencies = [
-    "qiskit>=1.4.2",
+    "qiskit>=1.4.2,<2.0.0",
     "backoff~=2.0",
     "qiskit-qasm3-import~=0.4",
     "requests~=2.0",
