--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,40 +23,44 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r ./requirements-dev.txt
+
+      - name: Sync dependencies (dev)
+        run: uv sync --group dev
 
       - name: Run lint
         run: |
-          python -m black --check .
-          python -m ruff check
-          python tools/verify_images.py
-      - name: Build documentation
-        uses: ./.github/actions/build-docs
+          uv run black --check .
+          uv run ruff check .
+          uv run python tools/verify_images.py
 
   run-tests:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         python-version: [3.11, 3.9]
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r ./requirements-dev.txt
+
+      - name: Sync dependencies
+        run: uv sync --group dev --extra ai-local-mode
+
       - name: Run tests
         env:
           QISKIT_IBM_TOKEN: ${{ secrets.QISKIT_IBM_TOKEN }}
@@ -65,5 +69,19 @@ jobs:
           QISKIT_IBM_RUNTIME_API_URL: "https://test.cloud.ibm.com"
           QISKIT_SERVERLESS_API_URL: "https://qiskit-serverless-dev.quantum.ibm.com"
           RUN_E2E: ${{ secrets.QISKIT_IBM_TOKEN != '' && '1' || '' }}
-        run: |
-          python -m pytest --reruns 3 .
+        run: uv run pytest --reruns 3 .
+
+  build-docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Sync docs dependencies
+        run: uv sync --group docs
+      - name: Build documentation
+        uses: ./.github/actions/build-docs
