--- a/.github/workflows/upload-docs.yml
+++ b/.github/workflows/upload-docs.yml
@@ -17,24 +17,23 @@ on:
     branches:
       - main
     tags:
-      - '*'
+      - "*"
 
 jobs:
-  build:
+  build-docs:
     if: github.repository_owner == 'Qiskit'
     name: Build
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        name: Install Python
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r ./requirements-dev.txt
-
+      - name: Sync docs dependencies
+        run: uv sync --group docs
       - name: Build documentation
         uses: ./.github/actions/build-docs
