chore: fix the cd.yml workflow to deploy the package using uv

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,20 +23,29 @@ jobs:
     environment: release
     permissions:
       id-token: write
-    strategy:
-      matrix:
-        python-version: [3.11]
+      
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+
+      - uses: astral-sh/setup-uv@v3
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install deps
-        run: pip install -U pip setuptools build
-      - name: Build sdist
-        run: python3 -m build
+          python-version: "3.11"
+
+      - name: Cache uv
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-cd-${{ hashFiles('uv.lock') }}
+
+      - name: Sync dependencies
+        run: uv sync
+
+      - name: Build package
+        run: uv build
+
       - uses: actions/upload-artifact@v4
         with:
           path: ./dist/*
-      - name: Deploy to Pypi
+
+      - name: Deploy to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
