chore: fix docs upload & PyPI build workflows and cache the uv environment (#217)
* chore: fix upload docs workflow (replace pip logic for uv)

* chore: refactor python setup using uv

* chore: optimize execution time by caching the uv environment

* chore: rename steps names to clarify the dependencies group to install

* chore: fix the cd.yml workflow to deploy the package using uv

* chore: rename sync dependencies step in upload-docs workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
           python-version: "3.11"
+
+      - name: Cache uv
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-${{ hashFiles('uv.lock') }}
 
       - name: Sync dependencies (dev)
         run: uv sync --group dev
@@ -50,15 +52,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: astral-sh/setup-uv@v3
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Sync dependencies
+      - name: Cache uv
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-${{ matrix.python-version }}-${{ hashFiles('uv.lock') }}
+
+      - name: Sync dependencies (dev + ai-local-mode)
         run: uv sync --group dev --extra ai-local-mode
 
       - name: Run tests
@@ -75,13 +79,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-      - name: Set up Python
-        uses: actions/setup-python@v5
+
+      - uses: astral-sh/setup-uv@v3
         with:
           python-version: "3.11"
-      - name: Sync docs dependencies
+
+      - name: Cache uv
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-docs-${{ hashFiles('uv.lock') }}
+
+      - name: Sync dependencies (docs)
         run: uv sync --group docs
+
       - name: Build documentation
         uses: ./.github/actions/build-docs
