--- a/.github/workflows/upload-docs.yml
+++ b/.github/workflows/upload-docs.yml
@@ -17,24 +17,29 @@ on:
     branches:
       - main
     tags:
-      - '*'
+      - "*"
 
 jobs:
-  build:
+  build-docs:
     if: github.repository_owner == 'Qiskit'
     name: Build
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        name: Install Python
+
+      - uses: astral-sh/setup-uv@v3
         with:
           python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r ./requirements-dev.txt
+
+      - name: Cache uv
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-docs-${{ hashFiles('uv.lock') }}
+
+      - name: Sync dependencies (docs)
+        run: uv sync --group docs
 
       - name: Build documentation
         uses: ./.github/actions/build-docs
