--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,8 +28,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: astral-sh/setup-uv@v3
-        with:
-          python-version: "3.11"
+
+      - name: Install Python
+        run: uv python install 3.11
 
       - name: Cache uv
         uses: actions/cache@v4
