--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.11, 3.10]
+        python-version: ["3.11", "3.10"]
 
     steps:
       - uses: actions/checkout@v4
