--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "networkx==2.8.5",
     "qiskit-serverless~=0.28.0",
     "qiskit_ibm_ai_local_transpiler~=0.5",
+    "qiskit-gym~=0.3.0"
 ]
 
 [project.optional-dependencies]
