Integration with qiskit-gym (#209)
* add hf client

* Add models repository

* Add utility to compute hashes from configs

* Model repository bootstrap

* Local perm using qiskit-gym

* Add linear functions and cliffords

* Fix lint & ruff. Add qiskit-gym dep

* Expected model HF path

* Add right hf pointers. Remove old type specs. Add qiskit-gym to pyproject

* Fix model sources

* Improve model specification config.

* Add environment variable configuration guide

* Improve error messages

* Fix lint

* instantiate HFApi each time we instantiate HFInterface

* improve error messages

* fix return type

* num_searches si now an optional argument for AILocal<type>Classes defaulting to 10

* Replace old BaseException coming from service eras to Exception

* Fix lint

* Warn that models downloading is ongoing

* Remove unneeded fixture

* Added release note

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "networkx==2.8.5",
     "qiskit-serverless~=0.28.0",
     "qiskit_ibm_ai_local_transpiler~=0.5",
+    "qiskit-gym~=0.3.0",
+    "PyYAML~=6.0"
 ]
 
 [project.optional-dependencies]
@@ -59,6 +61,12 @@ docs = [
 [build-system]
 requires = ["setuptools", "build"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = { find = { where = ["."], include = ["qiskit_ibm_transpiler*"], exclude = ["models*"] } }
+
+[tool.setuptools.package-data]
+qiskit_ibm_transpiler = ["data/*.yaml"]
 
 [tool.uv]
 index-url = "https://pypi.org/simple"
