qiskit-gym Pauli inference

--- a/qiskit_ibm_transpiler/data/model_sources.yaml
+++ b/qiskit_ibm_transpiler/data/model_sources.yaml
@@ -15,3 +15,8 @@ linear_function:
 clifford:
   repo_id: qiskit/ai-transpiler_cliffords
   revision: main
+
+# Pauli network synthesis model
+pauli:
+  repo_id: qiskit/ai-transpiler_paulis
+  revision: main
